# alloy

./: Cargo.toml  DESIGN_SYSTEM.md  README.md  UX_REDESIGN.md  colors.json  update.sh
Vitals/: Cargo.toml  install.sh
Vitals/src/: app.rs  main.rs  style.css  window.rs
Vitals/src/core/: color_config.rs  mod.rs
Vitals/src/data/: mod.rs  system_monitor.rs
Vitals/src/ui/: cpu_view.rs  custom_charts.rs  dashboard_view.rs  disk_view.rs  gpu_view.rs  memory_view.rs  mod.rs  network_view.rs  process_view.rs  sidebar.rs
fuse/: Cargo.toml
fuse/src/: app.rs  main.rs  window.rs
fuse/src/core/: config.rs  mod.rs  quickshell.rs  sidebar_prefs.rs
fuse/src/resources/: style.css  style.css.bak
fuse/src/tabs/: audio.rs  bar.rs  bluetooth.rs  colors.rs  general.rs  index.rs  look_and_feel.rs  mod.rs  system.rs  wallpapers.rs
fuse/src/widgets/: mod.rs
index/: Cargo.toml  README.md  index  install.sh  update.sh
index/src/: app.rs  main.rs  style.css  window.rs
index/src/core/: clipboard.rs  color_config.rs  config.rs  file_ops.rs  mod.rs  pinned.rs  scanner.rs  search.rs  sidebar_prefs.rs
index/src/widgets/: dialogs.rs  file_view.rs  header_bar.rs  mod.rs  path_bar.rs  settings.rs  sidebar.rs
spark/: README.md  colors.json  shell.qml
spark/components/: AppLauncher.qml  ClipboardManager.qml  Dashboard.qml  RightEdgeDetector.qml  SidePanel.qml  qmldir
spark/scripts/: save-colors.py
src/: app.rs  graph.rs  lib.rs  main.rs  system.rs  ui.rs  update_checker.rs
