[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "High-performance system monitor inspired by btop"
authors = ["Core Team"]

[dependencies]
gtk4 = { version = "0.8", features = ["v4_12"] }
libadwaita = { version = "0.6", features = ["v1_5"] }
sysinfo = "0.32"
glib = "0.20"
gio = "0.20"
cairo-rs = "0.19"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
