[package]
name = "vitals"
version = "0.1.0"
edition = "2021"
description = "Modern system monitor with GTK4 and libadwaita"
authors = ["Alloy Team"]

[dependencies]
gtk4 = { version = "0.8", features = ["v4_12"] }
libadwaita = { version = "0.6", features = ["v1_5"] }
sysinfo = "0.32"
tokio = { version = "1", features = ["full"] }
cairo-rs = "0.19"
glib = "0.20"
gio = "0.20"
async-channel = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5"
regex = "1"
core = { path = "../" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
